<resources>
    <string name="app_name">CoW-App</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="accept_button">Accept</string>
    <string name="decline_button">Decline</string>
    <string name="head_data_protection">Terms of Use</string>
    <string name="text_data_protection">You agree that CoWApp is allowed to activate the Bluetooth of your device and send or receive data via it (generated keys with time stamp and location as well as information about your current infection status). \nPermission to activate your GPS location is also required for this in order to enable Bluetooth transmission with people in your surroundings. The collected data will not be read out, saved or used for other purposes. \nFurthermore you agree that the app may run as a background process on your mobile device at any time and is allowed to send your generated and collected anonymous keys to the server if there is an existing infection and you push notifications, too. \nThis is the only way the correct function of the Corona-Warn-App is given.</string>
    <string name="decline_info_title">Agreement required </string>
    <string name="decline_info_message">You have to accept the terms of use to use the application. </string>
    <string name="decline_info_ok_button">Okay</string>
    <string name="exit_app">Exit</string>
    <string name="background_location_access_title">This app needs background location access</string>
    <string name="background_location_access_message">Please grant location access so this app can detect COVID contacts in the background</string>
    <string name="background_location_access_denied_title">Functionality limited</string>
    <string name="background_location_access_denied_message">Since background location access has not been granted, this app will not be able to discover COVID contacts in the background.  Please go to Settings -> Applications -> Permissions and grant background location access to this app</string>
    <string name="bluetooth_enabled_title">Bluetooth not enabled</string>
    <string name="bluetooth_enabled_message">Please enable Bluetooth and restart the application or use "Request Permissions again"</string>
    <string name="ble_available_title">Bluetooth LE not available</string>
    <string name="ble_available_message">This device doesn\'t support Bluetooth-Low-Energy technology. Therefore you won\'t be able to use the app on this device</string>
    <string name="location_access_denied_message">Since location access has not been granted, this app will not be able to discover COVID contacts in the background</string>
    <string name="background_location_denied">Since background location access has not been granted, this app will not be able to discover beacons when in the background</string>
    <string name="request_permission">Request permissions again</string>
    <string name="menu_log">History</string>
    <string name="menu_info">Info</string>
    <string name="menu_test">Test</string>
    <string name="menu_report_negative">Negative test report</string>
    <string name="report_infection_button">Report Infection</string>
    <string name="report_infection_button_ci">Further Information</string>
    <string name="suspicion_button">Suspicion?</string>
    <string name="suspicion_button_ci">Negative Test Report</string>
    <string name="traffic_light_description">View to show the current risk status via traffic light status.</string>
    <string name="infoRiskCalcButton_description">Click to show the information page about the risk level calculation.</string>
    <string name="check_bluetooth_enabled_title">Please enable Bluetooth</string>
    <string name="check_bluetooth_enabled_message">Your Bluetooth is disabled.\nThe App needs Bluetooth and GPS (Location) to be always turned on to detect Covid contacts.</string>
    <string name="check_gps_enabled_title">Please enable GPS (Location)</string>
    <string name="check_gps_enabled_message">Your GPS (Location) is disabled.\nThe App needs Bluetooth and GPS (Location) to be always turned on to detect Covid contacts.</string>
    <string name="risk_status_default">Current risk</string>
    <string name="risk_status_low">Low Risk</string>
    <string name="risk_status_moderate">Moderate Risk</string>
    <string name="risk_status_high">High Risk</string>
    <string name="risk_level">Risk Level: \n%1$d of 100</string>
    <string name="current_infection">Current Infection</string>
    <string name="report_no_button">No</string>
    <string name="report_yes_button">Yes</string>
    <string name="head_report_infection">Report Infection</string>
    <string name="head_report_negative">Report Negative Test Result</string>
    <string name="text_report_infection">Do you really want to report yourself infected? \n(Only with positive PCR test result.)</string>
    <string name="text_report_negative">Do you really want to report yourself negative? \n(Only with negative PCR test result.)</string>
    <string name="input">Please enter Test-ID!</string>
    <string name="wrong">The Test ID you entered is incorrect. \n(Maybe the ID has been entered incorrectly or it is older than 3 days and has therefore expired.)</string>
    <string name="wronghead">Wrong Test ID</string>
    <string name="wait">Transmission is in progress.</string>
    <string name="waithead">Please wait ...</string>
    <string name="problem">A connection to the server could not be established. Please try again later!</string>
    <string name="problemhead">No Connection!</string>
    <string name="head_thank_you">Thank you for the report!</string>
    <string name="text_thank_you">The app warns your surroundings. Please inform your local health department and immediately go into 14-day quarantine.</string>
    <string name="head_report_successful">Report successful</string>
    <string name="text_report_successful">You have been successfully reported negative. Thank you! \n(Caution: A negative test result does not rule out an infection.)</string>
    <string name="ci_text_report_successful">You have been successfully reported negative. Thank you!</string>
    <string name="daysSinceText">Since %1$s you are helping for %2$d days to fight the Coronavirus.</string>
    <string name="head_info_menu">Further Information</string>
    <string name="head_general_info">General Information</string>
    <string name="text_general_info">The CoWApp (Corona Warning App) is an application that anyone can use to further contain the spread of the coronavirus. \nWith it potential contact with corona-infected people can be determined in everyday life and an infection risk can be calculated. It is displayed by the traffic light principle and a risk value of 1 to 100. \nYou will also receive a push notification when a potential health risk has been identified so you know how to act correctly to protect yourself and those around you. \nUnder Suspicion? you can receive information on what to do if you suspect an infection, in the info menu further information.</string>
    <string name="head_risk_level_info">Risk Level Information</string>
    <string name="short_Risk_Level_Info_Head">What is the risk level?</string>
    <string name="short_Risk_Level_Info_Text">The risk level is a numerical value between 0 and 100,\nwhich the CoW-App calculates for you.\nThe risk value represents through a number how likely it is that you have been infected with the Covid-virus in the last 14 days.</string>
    <string name="head_traffic_light_info">Explanation of the Traffic Light</string>
    <string name="text_traffic_light_info">For further clarity and how the user should best behave, the CoW-App divides and simplifies the risk level via the traffic light display.</string>
    <string name="head_traffic_light_green">Green Traffic Light</string>
    <string name="text_traffic_light_green">A risk value less than 35 (i.e. 0 – 34) results in a green traffic light color, which signals to the user that an infection is very unlikely and that he can therefore be unconcerned. Notice: A risk level of 0 does not rule out an infection!</string>
    <string name="head_traffic_light_yellow">Yellow Traffic Light</string>
    <string name="text_traffic_light_yellow">A value between 35 and 70 results in a yellow traffic light color, which means that an infection is already possible but not very likely.\nIf the risk level is in the lower range, close to 35,\nan infection is unlikely. If the risk level is close to the value of 70,\nthe possibility of an infection is more likely.</string>
    <string name="head_traffic_light_red">Red Traffic Light</string>
    <string name="text_traffic_light_red">A risk level above 70 causes the traffic light to turn red, indicating a high probability of infection.</string>
    <string name="head_risk_level_calculation_info">Explanation of the Calculation</string>
    <string name="text_risk_level_calculation_info">To understand the calculation the following terms should be clarified first.\n\n<u>Contact</u>: A so-called contact was determined by the exchange of keys between end devices.\n\nOnly contacts with persons who have already been exchanged at the time of an infection report are included in the risk level calculation.\n\nThese contacts are further specified by evaluating them as either direct or indirect contact.\n\n<u>Direct contact</u>: means that there has been contact with a person reported as infected.\n\n<u>Indirect contact</u> means a contact with a person who is not reported as infected itself, but has had contact with a third person who is reported as infected To calculate the risk level.\n\nAll direct and indirect contacts as well as the user\'s self-infection report from the last 14 days are taken into account.\n\nThe Duration of the contacts is also included in the calculation.\nFor this purpose, long contacts are converted into several short contacts.\n\nAn existing infection is signaled by a value of 100.</string>
    <string name="head_infection_info">Current Infection - How to act?</string>
    <string name="text_infection_info">In the event of an acute infection, you are obliged to go into quarantine immediately and remain in quarantine for 14 days or until you receive a negative PCR test result. \nYou are also obliged to notify your local health department. \nAny roommates should also be tested immediately and you are encouraged to distance yourself from them. \nFurther information at the page of the federal government or the WHO: https://www.bundesregierung.de/breg-de/themen/coronavirus/coronavirus-wissen \nfor German speaking people or \n https://www.who.int/health-topics/coronavirus#tab=tab_1 \nfor general information.</string>
    <string name="head_suspicion_info">Suspicion? - What to do?</string>
    <string name="ok_button">Okay</string>
    <string name="actions">Test-Actions</string>
    <string name="logs">Debug-Log-Settings</string>
    <string name="debuglog">Debug-Log</string>
    <string name="head_test_menu">Test menu</string>
    <string name="test_button_1">push notification test</string>
    <string name="test_button_2">key generation test</string>
    <string name="test_button_3">risk level test</string>
    <string name="test_button_4">check infection status test</string>
    <string name="test_button_5">log own keys test</string>
    <string name="test_button_6">delete own keys test</string>
    <string name="reset_button_risklevel">reset risk level</string>
    <string name="test_button_7">Transmitting on/off</string>
    <string name="test_button_8">Scanning on/off</string>
    <string name="faq">FAQ</string>
</resources>