<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_more"
        android:icon="@drawable/ic_dropdown_menu"
        android:title=""
        app:showAsAction="ifRoom">

        <menu>

    <item android:id="@+id/item1"
        android:icon="@drawable/ic_menu_log"
        android:title="@string/menu_log"
        app:showAsAction="never"/>

    <item android:id="@+id/item2"
        android:icon="@drawable/ic_menu_info"
        android:title="@string/menu_info"
        app:showAsAction="never"/>

    <item android:id="@+id/item3"
        android:icon="@drawable/ic_menu_test"
        android:title="@string/menu_test"
        app:showAsAction="never"/>

    <item android:id="@+id/item4"
        android:icon="@drawable/ic_menu_report"
        android:title="@string/menu_report_negative"
        app:showAsAction="never"/>

        </menu>
    </item>


</menu>