<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TestMenuActivity">

    <Button
        android:id="@+id/Test6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/test_buttons_marginStart_and_End"
        android:layout_marginTop="@dimen/test_buttons_marginTop"
        android:layout_marginEnd="@dimen/test_buttons_marginStart_and_End"
        android:text="@string/test_button_6"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#000000"
        android:textSize="@dimen/test_buttons_textSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Test5" />

    <Button
        android:id="@+id/Test5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/test_buttons_marginStart_and_End"
        android:layout_marginTop="@dimen/test_buttons_marginTop"
        android:layout_marginEnd="@dimen/test_buttons_marginStart_and_End"
        android:text="@string/test_button_5"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#000000"
        android:textSize="@dimen/test_buttons_textSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Test4" />

    <Button
        android:id="@+id/Test4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/test_buttons_marginStart_and_End"
        android:layout_marginTop="@dimen/test_buttons_marginTop"
        android:layout_marginEnd="@dimen/test_buttons_marginStart_and_End"
        android:text="@string/test_button_4"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#000000"
        android:textSize="@dimen/test_buttons_textSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scan" />

    <Button
        android:id="@+id/Test3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/test_buttons_marginStart_and_End"
        android:layout_marginTop="@dimen/test_buttons_marginTop"
        android:text="@string/test_button_3"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/resetButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Test2" />

    <TextView
        android:id="@+id/headTestMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/test_head_marginStart_and_End"
        android:layout_marginTop="@dimen/test_head_marginTop"
        android:layout_marginEnd="@dimen/test_head_marginStart_and_End"
        android:text="@string/head_test_menu"
        android:textColor="#142850"
        android:textSize="@dimen/test_head_textSize"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Test1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/test_buttons_marginStart_and_End"
        android:layout_marginTop="@dimen/test_button1_marginTop"
        android:layout_marginEnd="@dimen/test_buttons_marginStart_and_End"
        android:text="@string/test_button_1"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#000000"
        android:textSize="@dimen/test_buttons_textSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headTestMenu" />

    <Button
        android:id="@+id/Test2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/test_buttons_marginStart_and_End"
        android:layout_marginTop="@dimen/test_buttons_marginTop"
        android:layout_marginEnd="@dimen/test_buttons_marginStart_and_End"
        android:text="@string/test_button_2"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#000000"
        android:textSize="@dimen/test_buttons_textSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Test1" />

    <Button
        android:id="@+id/resetButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/test_buttons_marginTop"
        android:layout_marginEnd="@dimen/test_buttons_marginStart_and_End"
        android:backgroundTint="#EA6262"
        android:text="@string/reset_button_risklevel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Test2" />

    <Button
        android:id="@+id/transmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/test_buttons_marginStart_and_End"
        android:layout_marginTop="@dimen/test_buttons_marginTop"
        android:layout_marginEnd="@dimen/test_buttons_marginStart_and_End"
        android:text="@string/test_button_7"
        android:textSize="@dimen/test_buttons_textSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Test3" />

    <Button
        android:id="@+id/scan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/test_buttons_marginStart_and_End"
        android:layout_marginTop="@dimen/test_buttons_marginTop"
        android:layout_marginEnd="@dimen/test_buttons_marginStart_and_End"
        android:text="@string/test_button_8"
        android:textSize="@dimen/test_buttons_textSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/transmit" />
</androidx.constraintlayout.widget.ConstraintLayout>